Correct flex not spacing images

--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
-.entirePage {
+ .entirePage {
   display: flex;
   flex-direction: column;
-  max-width: 1400; /*good size?*/
+  max-width: 1400px; /*good size?*/
 }
 
 .titleArea {
   background-image: url("https://i.imgur.com/QRgTT3u.jpg"); /* move icons? */
-
+/*cut image*/
 }
 
 #titleIntro {
@@ -18,7 +18,7 @@
   justify-content: flex-end;
 }
 
-.subHeader {
+#introLine {
   background-color: slategray;
   margin: 0px 0px 0px; /* cant get rid of margin */
 }
@@ -35,44 +35,59 @@
 }
 
 .gameOne {
-  flex: 20%;
-  padding: 15px; /*added b/c justify content isnt working*/
+  flex: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .gameTwo {
-  flex: 20%;
-  padding: 15px;
-
+  flex: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .gameThree {
-  flex: 20%;
-  padding: 15px;
+  flex: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .gameFour {
-  flex: 20%;
-  padding: 15px;
+  flex: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .gameFive {
-  flex: 20%;
-  padding: 15px;
+  flex: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .gameSix {
-  flex: 20%;
-  padding: 15px;
+  flex: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .gameSeven {
-  flex: 20%;
-  padding: 15px;
+  flex: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .gameEight {
-  flex: 20%;
-  padding: 15px;
+  flex: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media (max-width: 500px) { /*need guidance*/
